--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     ></script>
     <link rel="stylesheet" href="main/style.css" />
     <link
-      href="//cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css"
+      href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css"
       rel="stylesheet"
     />
     <script
@@ -183,6 +183,6 @@
       </div>
     </div>
     <script src="main/app.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
   </body>
 </html>
